--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.10.1",
+    "react-spinners": "^0.17.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
