create user profile update authentication

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ VITE_projectId=digital-life-lessons-d2dce
 VITE_storageBucket=digital-life-lessons-d2dce.firebasestorage.app
 VITE_messagingSenderId=408668203592
 VITE_appId=1:408668203592:web:22584dca329c7e5bf8067d
+VITE_image_host_key=40f4c6e0a929764de95edbb3224f7fbe
