--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.10.1",
+    "react-share": "^5.2.2",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.5.1",
