--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "framer-motion": "^12.23.25",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.556.0",
+    "motion": "^12.23.26",
+    "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.68.0",
